feat: 分账方案更新逻辑调整
