# api/backend/docs/swagger.json
@@ -1450,31 +1450,6 @@
                         "description": "OK"
                     }
                 }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "tags": [
-                    "分账方案"
-                ],
-                "summary": "删除分账方案",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "分账方案ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
             }
         },
         "/profit/distribution/rule/{id}/disable": {
@@ -3195,6 +3170,10 @@
         "domain.ProfitDistributionRule": {
             "type": "object",
             "properties": {
+                "bill_generation_day": {
+                    "description": "账单生成日：1-28号",
+                    "type": "integer"
+                },
                 "billing_cycle": {
                     "description": "账单生成周期",
                     "allOf": [
@@ -4436,6 +4415,12 @@
                 "store_ids"
             ],
             "properties": {
+                "bill_generation_day": {
+                    "description": "账单生成日：1-28号（必选）",
+                    "type": "integer",
+                    "maximum": 28,
+                    "minimum": 1
+                },
                 "billing_cycle": {
                     "description": "账单生成周期（必选）",
                     "enum": [
@@ -4486,6 +4471,12 @@
                 "store_ids"
             ],
             "properties": {
+                "bill_generation_day": {
+                    "description": "账单生成日：1-28号（必选）",
+                    "type": "integer",
+                    "maximum": 28,
+                    "minimum": 1
+                },
                 "billing_cycle": {
                     "description": "账单生成周期（必选）",
                     "enum": [
